# ph-qmi8658-imu

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TEMP_PUBLISHABLE_PLAN.md  clippy.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/imu-example/: Cargo.toml  README.md
apps/imu-example/src/: main.rs
apps/qa-runner/: Cargo.toml  build.rs
apps/qa-runner/.cargo/: config.toml
apps/qa-runner/src/: main.rs
crates/qmi8658/: ARCHITECTURE.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md
crates/qmi8658/src/: device.rs  driver.rs  error.rs  interrupt.rs  lib.rs  macros.rs  pull.rs  register.rs  self_test.rs  wom.rs
crates/qmi8658/src/config/: common.rs  mod.rs  mode.rs
crates/qmi8658/src/data/: fifo.rs  fixed.rs  mod.rs  scale.rs
crates/qmi8658/src/interface/: address.rs  i2c.rs  mod.rs  spi.rs
crates/qmi8658/src/testing/: mock.rs  mod.rs
