[package]
name = "imu-example"
version = "0.1.0"
publish = false
edition = "2024"
rust-version = "1.92.0"
description = "Example application for the QMI8658 IMU sensor driver"

[[bin]]
name = "imu-example"
path = "./src/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32s3"] }
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = ["defmt", "esp32s3", "panic-handler"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
critical-section = "1.2.0"
embedded-hal-async = { version = "1.0.0", default-features = false }
embedded-hal = { version = "1.0.0", default-features = false }
ph-qmi8658 = { path = "../../crates/qmi8658", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
