[package]
name = "ph-qmi8658"
version = "0.1.1"
description = "Asynchronous driver for the QMI8658 IMU sensor"
authors = ["Steven Giacomelli <steve@giacomelli.ca>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/photon-circus/ph-qmi8658-imu"
keywords = ["imu", "qmi8658", "embedded", "accelerometer", "gyroscope"]
categories = ["embedded", "no-std", "hardware-support"]
publish = true
rust-version = "1.92.0"
exclude = [
    "ARCHITECTURE.md",
    "RELEASE_CHECKLIST.md",
]

[dependencies]
embedded-hal-async = { version = "1.0.0", default-features = false }
defmt = { version = "1.0.1", optional = true }
fixed = { version = "1.28.0", default-features = false, optional = true }

[features]
default = []
defmt = ["dep:defmt"]
fixed = ["dep:fixed"]

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
